Agrega parrafo a la pagina

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Mi primera pagina web con GIT</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, maxime maiores. Cumque a placeat similique molestiae recusandae nisi doloremque delectus quos non quis ipsum maxime mollitia necessitatibus reprehenderit totam officiis aspernatur nostrum doloribus, debitis voluptatem, accusamus facilis ab. Ducimus, sequi.</p>
   </body>
 </html>
