Update index.html with GitHub editor
Add footer tag to code.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1>Mi primera pagina web con GIT</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, maxime maiores. Cumque a placeat similique molestiae recusandae nisi doloremque delectus quos non quis ipsum maxime mollitia necessitatibus reprehenderit totam officiis aspernatur nostrum doloribus, debitis voluptatem, accusamus facilis ab. Ducimus, sequi.</p>
+    <footer>
+      <p>Este es eñ pie de pagina</p>  
+    </footer>
   </body>
 </html>
